# busan_project

./: README.md  main  main.c
Busan/: .gitignore  CMakeLists.txt
Busan/basedef/: CMakeLists.txt
Busan/basedef/include/Busan/basedef/: const.h  fun.h  global.h  obj.h  train.h
Busan/basedef/src/: fun.c  global.c  obj.c
Busan/main/: CMakeLists.txt  main
Busan/main/src/: initgame.c  main.c
Project123/: Project123.sln  README.md
Project123/Project123/: Project123.vcxproj  main.c
Project123/Project123/x64/Debug/: Project123.exe.recipe  Project123.ilk  vc143.idb
Project123/Project123/x64/Debug/Project123.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project123.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
